<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <CheckBox android:id="@+id/checkboxCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogCheckBox"/>

    <Button
        android:id="@+id/btnOk"
        android:text="@string/btnOk"
        android:onClick="clickButton1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/btnCancel"
        android:onClick="clickButton2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

</LinearLayout>