<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/dialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterText"/>
    <Button
        android:id="@+id/btnOk"
        android:text="@string/btnOk"
        android:onClick="clickButton1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
      />

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/btnCancel"
        android:onClick="clickButton2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>


</LinearLayout>